# rsbacktester

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: rust.yml
julia/: build_tarballs.jl  test.jl
src/: account.rs  bar.rs  bar_producer.rs  engine.rs  indicators.rs  lib.rs  position.rs  tests.rs
test_resources/: ticks.csv
