[package]
name = "rsbacktester"
version = "0.1.0"
authors = ["maccam912 <maccam912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust_decimal = "1.7"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hashbrown = "0.8"