[package]
name = "rsbacktester"
version = "0.1.0"
authors = ["maccam912 <maccam912@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
futures = "0.3"
chrono = "0.4"
num-rational = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hashbrown = "0.8"
